syntax = "proto3";

package player_pos;

service PlayerPosService {
    rpc PlayerGetPos(GetPosRequest) returns (GetPosResponse);
    rpc PlayerUpdatePos(UpdatePosRequest) returns (UpdatePosResponse);
    rpc PlayerGetAllPos(GetAllPosRequest) returns (GetAllPosResponse);
}

message Pos {
    string user_id = 1;
    uint64 pos_x = 2;
    uint64 pos_y = 3;
    float velocity_x = 4;
    float velocity_y = 5;
    uint64 last_update = 6;
}

message GetPosRequest {
    string user_id = 1;
    string token = 2;
}

message GetPosResponse {
    string user_id = 1;
    string token = 2;
    Pos pos = 3;
}

message UpdatePosRequest {
    string user_id = 1;
    string token = 2;
    Pos pos = 3;
}

message UpdatePosResponse {
    bool success = 1;
}

message GetAllPosRequest {
    string token = 1;
}

message GetAllPosResponse {
    repeated Pos pos = 1;
}